--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=8.0",
     "spryker/data-import": "^1.3.0",
-    "fond-of-oryx/cart-code-type": "^1.0.0"
+    "fond-of-oryx/cart-code-type": "^1.0.0 || ^2.0.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "^1.0",
